# Transformers-from-Scratch

./: .gitignore  README.md  data_loading.py  pyproject.toml
tests/: test_attention.py  test_bpe.py  test_pre-tokenize.py  test_pre-tokenize_bpe.py  test_tokenizers.py  test_unigram.py
tokenizer/: bpe.py  bpe_test.py  pre_tokenize.py  unigram.py  unigram_test.py
transformer/: model.py
