[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_transformers"
version = "0.1"
dependencies = [
    "regex",
    "numpy",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["tokenizer"]